--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "pg": "^8.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
