--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
-    "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18"
+    "framer-motion": "^11.11.0",
+    "next": "^14.2.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
